# kronos-shyu

./: .env.example  .gitignore  Dockerfile  Kronos agent build prompt.md  README.md  bot.py  docker-compose.yml  entry_bot.py  pyproject.toml  requirements.txt
config/: loader.py  logging.yaml  settings.yaml
model/: kronos.py
scripts/: run_backtest.py
src/: __init__.py  bot.py
src/backtest/: __init__.py  engine.py  metrics.py
src/data/: __init__.py  fetcher.py  schemas.py
src/execution/: __init__.py  notifier.py
src/indicators/: __init__.py  atr.py  rsi.py  volume.py  vwap.py
src/risk/: __init__.py  circuit_breaker.py  position_sizer.py  sl_tp.py
src/signals/: __init__.py  composer.py  filters.py  kronos.py
src/state/: __init__.py  tracker.py
tests/: test_backtest.py  test_indicators.py  test_risk.py  test_signals.py
